# tspy

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
tests/: test_client.py
tspy/: __init__.py  client.py  exceptions.py  models.py
